# simple_investment_portfolio

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docker-compose/: docker-compose.local.yaml
docker-compose/prometheus-data/: prometheus.yml
scripts/: celery_worker_windows.py
src/framework/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
src/framework/api/: __init__.py  responses.py  serializers.py
src/framework/di/: __init__.py  container.py  requests.py
src/framework/di/providers/: __init__.py  db_model_mappers.py  db_repositories.py  email.py  event_dispatchers.py  use_cases.py
src/framework/events/: event_dispatcher.py  events_registrator.py
src/framework/management/commands/: celery_worker.py
src/framework/middlewares/: __init__.py  provide_di_container_middleware.py
src/investment_portfolio/application/: application_events.py  errors.py
src/investment_portfolio/application/dto/: __init__.py  send_email_dto.py  user_investment_portfolio_dto.py
src/investment_portfolio/application/interfaces/: __init__.py  email_sender.py  event_dispatcher.py  investment_portfolio_read_repo.py
src/investment_portfolio/application/use_cases/: __init__.py  add_asset_to_investment_portfolio.py  create_user_investment_portfolio.py  get_user_investment_portfolio.py  send_first_user_portfolio_created_email.py
src/investment_portfolio/domain/: __init__.py  domain_events.py  investment_portfolio.py
src/investment_portfolio/infrastructure/: admin.py  app_label.py  apps.py  tasks.py  views.py
(+28 files in other folders)
